# python-project-boilerplate

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
src/: main.py
src/core/: config.py  env.py  logging.py
src/core/logging/: __init__.py  logging.py
src/tools/: __init__.py  singleton.py
src/tools/http/: __init__.py  abc.py  aiohttp.py
