[project]
name = "python-project-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiohttp[speedups]>=3.11.18",
    "loguru>=0.7.3",
    "orjson>=3.10.16",
    "pydantic-settings>=2.9.1",
]
